--- a/typo3/sysext/t3skin/Resources/Public/Css/visual/t3kin.css
+++ b/typo3/sysext/t3skin/Resources/Public/Css/visual/t3kin.css
@@ -8651,6 +8651,31 @@ table.t3-table > tbody > tr:hover > th {
 /* - - - - - - - - - - - - - - - - - - - - -
 TCEforms
 - - - - - - - - - - - - - - - - - - - - - */
+.typo3-TCEforms div.typo3-dyntabmenu-divs {
+  padding: 0;
+}
+.typo3-TCEforms .table {
+  margin-bottom: 0;
+}
+.typo3-TCEforms .table > tbody > tr > td {
+  background: none;
+}
+.typo3-TCEforms .table > tbody > tr > td.palette-header {
+  border-top: 1px solid #d7d7d7;
+}
+.typo3-TCEforms .table > tbody > tr > td.palette-header h3 {
+  margin-top: 12px;
+  margin-bottom: 0;
+}
+.typo3-TCEforms .table > tbody > tr > td .t3-form-palette-fieldset {
+  margin-bottom: 12px;
+}
+.typo3-TCEforms .table > tbody > tr > td .t3-form-palette-fieldset .t3-form-palette-field-container {
+  margin-bottom: 6px;
+}
+.typo3-TCEforms .table > tbody > tr > td table.t3-form-field-group-file td {
+  padding-left: 0;
+}
 img.t3-TCEforms-reqImg {
   display: block;
   position: absolute;
@@ -8722,9 +8747,6 @@ img.t3-TCEforms-contentchangedPaletteImg {
 }
 td.palette-header {
   padding-left: 10px;
-}
-.typo3-TCEforms .palette-header h3 {
-  margin-top: 10px;
 }
 .typo3-TCEforms .bgColor2,
 .typo3-TCEforms tr.bgColor2 td {
@@ -8861,6 +8883,7 @@ div.typo3-TCEforms div.c-tablayer table > tbody > tr > td > table.wrapperTable >
   display: inline-block;
   vertical-align: top;
   padding-right: 25px;
+  margin-bottom: 0.5em;
 }
 .t3-form-palette-field-container .t3-form-palette-field-label,
 .t3-form-palette-field-container .t3-form-palette-field {
@@ -8938,11 +8961,6 @@ input.typo3-TCEforms-suggest-search {
 /* - - - - - - - - - - - - - - - - - - - - -
 TCEforms Flexforms
 - - - - - - - - - - - - - - - - - - - - - */
-/** tabs inside the table => flexforms */
-.typo3-TCEforms .typo3-dyntabmenu-divs {
-  margin-right: 20px;
-  margin-bottom: 10px;
-}
 .t3-form-field-label-flex {
   border-top: 1px solid #c0c0c0;
   padding: 5px;
@@ -9261,9 +9279,6 @@ select option.c-divider {
   border: none;
   border-bottom: 1px solid #c0c0c0;
 }
-.t3-form-palette-fieldset {
-  border: none;
-}
 input.typo3-TCEforms-suggest-search {
   background-image: url('../../../../icons/gfx/zoom.gif');
   background-position: 2px center;
@@ -9377,7 +9392,7 @@ TCEforms Sections
 .t3-form-field-item {
   position: relative;
   border: 1px solid transparent;
-  padding: 7px 0;
+  padding: 0;
 }
 .t3-tceforms-widget-null-wrapper + .t3-form-field-item {
   display: inline-block;
